# llm-wrapper-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  commit_message.txt  pyproject.toml  requirements.txt
config/prompts/: system.txt
data/: accounting.sqlite
docs/: STRUCTURE.md
src/ask_online_question_mcp_server/: README.md  __main__.py  ask_online_question_server.py
src/llm_delegate_mcp_server/: __init__.py  __main__.py  llm_client.py  llm_mcp_server.py  stdio_server.py
src/llm_wrapper_mcp_server/: __main__.py  llm_client.py  llm_mcp_server.py  llm_mcp_wrapper.py  logger.py  stdio_server.py
src/llm_wrapper_mcp_server/llm_client_parts/: _accounting.py  _api_key_filter.py  _config.py  _llm_client_core.py
src/online_llm_server/: online_server.py
tests/: conftest.py  test_ask_online_question_server.py  test_integration_openrouter.py  test_llm_client.py  test_llm_mcp_wrapper.py  test_main_llm_wrapper.py  test_model_validation.py  test_openrouter.py  test_stdio_server.py
