[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-delegate-mcp-server"
version = "0.1.0"
description = "MCP server for online LLM queries via OpenRouter"
authors = [
    {name = "Mateusz", email = "matdev83@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_delegate_mcp_server"]
